--- a/MovieReview/index.html
+++ b/MovieReview/index.html
@@ -19,7 +19,7 @@
             <!--Search Box -->
             <div class="Search">
                 <form id="searchForm" onsubmit="return false">
-                    <input type="text" id="searchText" onkeyup="getMovies()" placeholder="Search For Movies.. ">
+                    <input type="text" id="searchText" onkeyup="getMovies('search')" placeholder="Search For Movies.. ">
                 </form>
             </div>
         </center>
